Change hero text styling so title link is visible on our backgrounds and smaller screens/windows. This may be only a temporary fix. - set color: inherit on anchors in hero text so they get the hero text color from the style, rather than the site link color. The site link color happens to be invisible on top of one of obh hero images. - set font-weight: bold regardless of screen size. Once we make the link color the same as the hero body text we need some visual way to distinguish.

--- a/app/assets/stylesheets/controllers/home.css.scss
+++ b/app/assets/stylesheets/controllers/home.css.scss
@@ -268,10 +268,10 @@
       }
 
       a {
-        
+        color: inherit;
+        font-weight: bold;
         @include respond-to(normal-up) {
           font-size: 14px;
-          font-weight: bold;
           line-height: 21px;
         }
         
